syntax = "proto3";
package auth;

service AuthService {
  rpc ValidateUserToken (ValidateTokenRequestDto) returns (ValidateTokenResponseDto);
}

message ValidateTokenRequestDto { string token = 1; }
message DecodedUserResponseDto { string userId = 1; string email = 2; }
message ValidateTokenResponseDto {
  oneof response { DecodedUserResponseDto user = 1; Empty empty = 2; }
}
message Empty {}
